# RISC-V-VerilogSim

./: .gitignore  CMakeLists.txt  Constants.v  HazardUnit.v  Muxes.v  main.cpp
DecodeStage/: DecodeStage.v  RegFile.v
DecodeStage/ControlUnit/: ALUDecoder.v  ControlUnit.v  MainController.v
ExecuteStage/: Alu.v  Cmp.v  CondControl.v  ExecuteStage.v  ExecuteStage_tb.v
FetchStage/: FetchStage.v  InstructionMem.v  Mux.v  PC_Module.v  Summ.v
MemoryStage/: DataMemory.v  MemoryStage.v
Simulator/: Constants.v  Muxes.v  Simulator.v  Simulator_tb.v
Simulator/DecodeStage/: DecodeStage.v  DecodeStage_tb.v  RegFile.v
Simulator/DecodeStage/ControlUnit/: ALUDecoder.v  ControlUnit.v  MainController.v
Simulator/ExecuteStage/: Alu.v  CondControl.v  ExecuteStage.v  ImmDecoder.v
Simulator/FetchStage/: FetchStage.v  FetchStage_tb.v  InstructionMem.v  PC_Module.v
Simulator/MemoryStage/: MemoryStage.v
test/: test.c
